--- a/public/assets/icons/icons.html
+++ b/public/assets/icons/icons.html
@@ -1219,6 +1219,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-weapon"></i>
+            </span>
+            <br>
+            <span class='label'>weapon</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-weed"></i>
             </span>
             <br>
