--- a/public/assets/icons/icons.html
+++ b/public/assets/icons/icons.html
@@ -157,6 +157,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-boat"></i>
+            </span>
+            <br>
+            <span class='label'>boat</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-brain"></i>
             </span>
             <br>
@@ -251,6 +260,24 @@
             </span>
             <br>
             <span class='label'>clothes</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-compact"></i>
+            </span>
+            <br>
+            <span class='label'>compact</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-coupe"></i>
+            </span>
+            <br>
+            <span class='label'>coupe</span>
         </div>
 
 
@@ -517,6 +544,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-helicopter"></i>
+            </span>
+            <br>
+            <span class='label'>helicopter</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-home"></i>
             </span>
             <br>
@@ -733,6 +769,24 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-motorcycle"></i>
+            </span>
+            <br>
+            <span class='label'>motorcycle</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-muscle"></i>
+            </span>
+            <br>
+            <span class='label'>muscle</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-mushroom"></i>
             </span>
             <br>
@@ -764,6 +818,15 @@
             </span>
             <br>
             <span class='label'>nogun</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-offroad"></i>
+            </span>
+            <br>
+            <span class='label'>offroad</span>
         </div>
 
 
@@ -976,6 +1039,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-sedan"></i>
+            </span>
+            <br>
+            <span class='label'>sedan</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-shoes"></i>
             </span>
             <br>
@@ -1016,6 +1088,24 @@
             </span>
             <br>
             <span class='label'>speedometer</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-sport"></i>
+            </span>
+            <br>
+            <span class='label'>sport</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-sportsclassic"></i>
+            </span>
+            <br>
+            <span class='label'>sportsclassic</span>
         </div>
 
 
@@ -1066,10 +1156,28 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-super"></i>
+            </span>
+            <br>
+            <span class='label'>super</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-suppressor"></i>
             </span>
             <br>
             <span class='label'>suppressor</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-suv"></i>
+            </span>
+            <br>
+            <span class='label'>suv</span>
         </div>
 
 
@@ -1178,6 +1286,15 @@
             </span>
             <br>
             <span class='label'>usergroup</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-van"></i>
+            </span>
+            <br>
+            <span class='label'>van</span>
         </div>
 
 
